--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" dir="rtl">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,43 +8,82 @@
     <link rel="stylesheet" href="style.css">
     <title>Mizoma</title>
 </head>
-<body>
-  
-    <header>
-        <i onclick="open_sidebar()" id="open-sidebar" class="fas fa-bars"></i>
-        <div class="container">
-            <nav id="nav">
-                <a>
-                    <img src="pic/logonomy-1645725389131.jpeg" alt="Logo" style="height: 80px;width: 90px;">
-                  </a>
-                <ul>
-                    <li><a href="">صفحه اصلی</a></li>
-                    <li><a href="">محصولات</a></li>
-                    <li><a href="">خدمات</a></li>
-                    <li><a href="">درباره</a></li>
-                    <li><a href="">طراحی</a></li>
-                    <li><a href="">مشارکت</a></li>
-                    <li><a href="">تماس با ما</a></li>
-                </ul>
-                <i onclick="close_sidebar()" id="close-sidebar" class="fa-solid fa-x"></i>
-            </nav>
-        </div>
-    </header>
 
-    <section class="slider">
-        <div class="slider-content">
-            <img src="pic/1.jpeg" alt="">
-            <!-- <img src="pic/1.jpeg" alt="">
-            <img src="pic/1.jpeg" alt="">
-            <img src="pic/1.jpeg" alt="">
-            <img src="pic/1.jpeg" alt="">
-            <img src="pic/1.jpeg" alt=""> -->
+<body>
+
+    <section>
+        <header>
+            <i onclick="open_sidebar()" id="open-sidebar" class="fas fa-bars"></i>
+            <div class="container">
+                <nav id="nav">
+                    <a>
+                        <img src="pic/logonomy-1645725389131.jpeg" alt="Logo" style="height: 80px;width: 90px;">
+                    </a>
+                    <ul>
+                        <li><a href="">صفحه اصلی</a></li>
+                        <li><a href="">محصولات</a></li>
+                        <li><a href="">خدمات</a></li>
+                        <li><a href="">درباره</a></li>
+                        <li><a href="">طراحی</a></li>
+                        <li><a href="">مشارکت</a></li>
+                        <li><a href="">تماس با ما</a></li>
+                    </ul>
+                    <i onclick="close_sidebar()" id="close-sidebar" class="fa-solid fa-x"></i>
+                </nav>
+            </div>
+        </header>
+    </section>
+    
+
+    <section>
+        <div class="slider">
+            <div class="slideshow-container">
+
+                <!-- Full-width images with number and caption text -->
+                <div class="mySlides fade">
+                    <img src="pic/1.jpeg" style="width:100%" alt="sliderimg">
+                </div>
+
+                <div class="mySlides fade">
+                    <img src="pic/2.jpeg" style="width:100%" alt="sliderimg">
+                </div>
+
+                <div class="mySlides fade">
+                    <img src="pic/3.jpeg" style="width:100%" alt="sliderimg">
+                </div>
+
+                <div class="mySlides fade">
+                    <img src="pic/4.jpeg" style="width:100%" alt="sliderimg">
+                </div>
+
+                <div class="mySlides fade">
+                    <img src="pic/5.png" style="width:100%" alt="sliderimg">
+                </div>
+
+
+
+                <!-- Next and previous buttons -->
+                <a class="prev" onclick="plusSlides(1)">&#10094;</a>
+                <a class="next" onclick="plusSlides(-1)">&#10095;</a>
+            </div>
+            <br>
+
+            <!--Under slider -->
+            <div dir="ltr" class="under-slider" style="text-align:center">
+                <img src="pic/11.png" class="dot" onclick="currentSlide(1)"></img>
+                <img src="pic/22.png" class="dot" onclick="currentSlide(2)"></img>
+                <img src="pic/33.png" class="dot" onclick="currentSlide(3)"></img>
+                <img src="pic/44.png" class="dot" onclick="currentSlide(4)"></img>
+                <img src="pic/55.png" class="dot" onclick="currentSlide(5)"></img>
+
+            </div>
         </div>
     </section>
 
 
 
-   <script src="all.min.js"></script>
-   <script src="javascript.js"></script>
+    <script src="all.min.js"></script>
+    <script src="javascript.js"></script>
 </body>
+
 </html>
