--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
             <i onclick="open_sidebar()" id="open-sidebar" class="fas fa-bars"></i>
             <div class="container">
                 <nav id="nav">
-                    <a>
+                    <a href="#">
                         <img src="pic/logonomy-1645725389131.jpeg" alt="Logo" style="height: 80px;width: 90px;">
                     </a>
                     <ul>
-                        <li><a href="">صفحه اصلی</a></li>
-                        <li><a href="">محصولات</a></li>
-                        <li><a href="">خدمات</a></li>
-                        <li><a href="">درباره</a></li>
-                        <li><a href="">طراحی</a></li>
-                        <li><a href="">مشارکت</a></li>
-                        <li><a href="">تماس با ما</a></li>
+                        <li><a href="#">صفحه اصلی</a></li>
+                        <li><a href="#">محصولات</a></li>
+                        <li><a href="#">خدمات</a></li>
+                        <li><a href="#">درباره</a></li>
+                        <li><a href="#">طراحی</a></li>
+                        <li><a href="#">مشارکت</a></li>
+                        <li><a href="#">تماس با ما</a></li>
                     </ul>
                     <i onclick="close_sidebar()" id="close-sidebar" class="fa-solid fa-x"></i>
                 </nav>
