--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
 
             <!--Under slider -->
             <div dir="ltr" class="under-slider" style="text-align:center">
-                <img src="pic/11.jpg" class="dot" onclick="currentSlide(2)"></img>
-                <img src="pic/22.jpg" class="dot" onclick="currentSlide(1)"></img>
-                <img src="pic/33.jpg" class="dot" onclick="currentSlide(3)"></img>
-                <img src="pic/44.jpg" class="dot" onclick="currentSlide(4)"></img>
-                <img src="pic/55.jpg" class="dot" onclick="currentSlide(5)"></img>
+                <img src="pic/1.jpeg" class="dot" onclick="currentSlide(2)"></img>
+                <img src="pic/2.jpeg" class="dot" onclick="currentSlide(1)"></img>
+                <img src="pic/3.jpeg" class="dot" onclick="currentSlide(3)"></img>
+                <img src="pic/4.jpeg" class="dot" onclick="currentSlide(4)"></img>
+                <img src="pic/5.jpeg" class="dot" onclick="currentSlide(5)"></img>
 
             </div>
         </div>
