--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
 <body>
 
+    <!-- header -->
+
     <section>
         <header>
             <i onclick="open_sidebar()" id="open-sidebar" class="fas fa-bars"></i>
@@ -33,7 +35,9 @@
             </div>
         </header>
     </section>
-    
+
+
+    <!-- slider -->
 
     <section>
         <div class="slider">
@@ -79,6 +83,60 @@
             </div>
         </div>
     </section>
+
+
+    <!-- intro-text -->
+
+
+    <section>
+        <div class="intro-text">
+            <div class="intro-text-content">
+                <p>میزوما یعنی رابطه‌ی خاص میز و ما. یعنی توجه به بخشی از فضای اطراف که هر روز ساعت‌های متمادی
+                    از وقتمان را آنجا می‌گذرانیم. میزوما درباره‌ی دکوراسیون نیست؛ به یک مفهوم بیشتر شباهت دارد.
+                    اینکه اتاق یا میز کار ما محل خاصی است؛ اینکه باید به آن توجه کرد. اینجا محل تولد معجزه‌های بزرگی
+                    در دنیا بوده؛ خیلی از بزرگان دنیای ما رابطه‌ی خاص میز و ما را درک کرده اند.</p>
+                <br>
+                <p>میزوما یعنی نظم، خلاقیت، تمرکز، کار عمیق، یعنی اتیکت؛ یعنی قلمرو اثربخشی ما. یعنی اهمیت دادن به
+                    ...بخش معناداری از زندگی که روی یک صندلی کوچک و پشت سطحی صاف و سخت می‌گذرد؛ اما عمق آن زندگی ما را
+                    تغییر
+                    می‌دهد این فضا نباید دست کم گرفته شود.
+                </p>
+            </div>
+        </div>
+    </section>
+
+
+
+    <section>
+        <div class="new-product">
+            <div class="new-product-title">
+                <h3>محصولات جدید</h3>
+            </div>
+            <div class="new-product-content">
+                <div class="product-box">
+                    <img class="product-img" src="pic/p1.png">
+                    <p>تقویم دیواری ۱۴۰۱</p>
+                    <span>۱۷۰٫۰۰۰ تومان</span>
+                </div>
+                <div class="product-box">
+                    <img class="product-img" src="pic/p2.png">
+                    <p>صندلی مدیریتی</p>
+                    <span>۲۱٫۰۰۰٫۰۰۰ تومان</span>
+                </div>
+                <div class="product-box">
+                    <img class="product-img" src="pic/p3.png">
+                    <p>صندلی اداری</p>
+                    <span>۱۸٫۵۰۰٫۰۰۰ تومان</span>
+                </div>
+                <div class="product-box">
+                    <img class="product-img" src="pic/p4.png">
+                    <p>تقویم دیواری  پک قهوه</p>
+                    <span>۲۹۹٫۰۰۰ تومان</span>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
 
 
