--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                 </div>
                 <div class="product-box">
                     <img class="product-img" src="pic/p4.png">
-                    <p>تقویم دیواری  پک قهوه</p>
+                    <p>پک قهوه</p>
                     <span>۲۹۹٫۰۰۰ تومان</span>
                 </div>
             </div>
