--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 
     <!-- header -->
 
+   
+
     <section>
         <header>
             <i onclick="open_sidebar()" id="open-sidebar" class="fas fa-bars"></i>
@@ -36,6 +38,13 @@
         </header>
     </section>
 
+    <div class="header-black-background">
+        <a href="#"><img src="pic/mizoma-logo.png" alt=""></a>
+        <div class="black-background-icons">
+            <i class="search-icon fas fa-search"></i>
+            <i class="basket-shopping fa-solid fa-basket-shopping"></i>
+        </div>
+    </div>
 
     <!-- slider -->
 
@@ -88,7 +97,7 @@
     <!-- intro-text -->
 
 
-    <section>
+    <section id="intro-text">
         <div class="intro-text">
             <div class="intro-text-content">
                 <p>میزوما یعنی رابطه‌ی خاص میز و ما. یعنی توجه به بخشی از فضای اطراف که هر روز ساعت‌های متمادی
@@ -106,32 +115,135 @@
     </section>
 
 
+    <!-- new-product -->
 
-    <section>
-        <div class="new-product">
-            <div class="new-product-title">
+    <section id="new-product">
+        <div class="product">
+            <div class="product-title">
                 <h3>محصولات جدید</h3>
             </div>
-            <div class="new-product-content">
+            <div class="product-content">
                 <div class="product-box">
                     <img class="product-img" src="pic/p1.png">
-                    <p>تقویم دیواری ۱۴۰۱</p>
-                    <span>۱۷۰٫۰۰۰ تومان</span>
+                    <div class="product-text">
+                        <p>تقویم دیواری ۱۴۰۱</p>
+                        <span>۱۷۰٫۰۰۰ تومان</span>
+                    </div>
                 </div>
                 <div class="product-box">
                     <img class="product-img" src="pic/p2.png">
-                    <p>صندلی مدیریتی</p>
-                    <span>۲۱٫۰۰۰٫۰۰۰ تومان</span>
+                    <div class="product-text">
+                        <p>صندلی مدیریتی</p>
+                        <span>۲۱٫۰۰۰٫۰۰۰ تومان</span>
+                    </div>
                 </div>
                 <div class="product-box">
                     <img class="product-img" src="pic/p3.png">
-                    <p>صندلی اداری</p>
-                    <span>۱۸٫۵۰۰٫۰۰۰ تومان</span>
+                    <div class="product-text">
+                        <p>صندلی اداری</p>
+                        <span>۱۸٫۵۰۰٫۰۰۰ تومان</span>
+                    </div>
                 </div>
                 <div class="product-box">
                     <img class="product-img" src="pic/p4.png">
-                    <p>پک قهوه</p>
-                    <span>۲۹۹٫۰۰۰ تومان</span>
+                    <div class="product-text">
+                        <p>تقویم دیواری پک قهوه</p>
+                        <span>۲۹۹٫۰۰۰ تومان</span>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
+
+
+    <!-- accessories -->
+
+
+    <section id="accessories">
+        <div class="product">
+            <div class="product-title">
+                <h3>محصولات جانبی</h3>
+            </div>
+            <div class="product-content">
+                <div class="product-box">
+                    <img class="product-img" src="pic/pj1.png">
+                    <div class="product-text">
+                        <p> قلمدان </p>
+                        <span>۳۲۰٫۰۰۰ تومان</span>
+                    </div>
+                </div>
+                <div class="product-box">
+                    <img class="product-img" src="pic/pj2.png">
+                    <div class="product-text">
+                        <p>پک ۳ تایی ساعت، چراغ و قلمدان </p>
+                        <span>۹۹۰٫۰۰۰ تومان</span>
+                    </div>
+                </div>
+                <div class="product-box">
+                    <img class="product-img" src="pic/pj3.png">
+                    <div class="product-text">
+                        <p> چراغ رومیزی</p>
+                        <span>۳۷۰٫۰۰۰ تومان</span>
+                    </div>
+                </div>
+                <div class="product-box">
+                    <img class="product-img" src="pic/pj4.png">
+                    <div class="product-text">
+                        <p>ماگ سرامیکی </p>
+                        <span>۱۲۰٫۰۰۰ تومان</span>
+                    </div>
+                </div>
+                <div class="product-box">
+                    <img class="product-img" src="pic/pj6.png">
+                    <div class="product-text">
+                        <p>عینک محافظ چشم برای کامپیوتر </p>
+                        <span>۵۹۰٫۰۰۰ تومان</span>
+                    </div>
+                </div>
+                <div class="product-box">
+                    <img class="product-img" src="pic/pj7.png">
+                    <div class="product-text">
+                        <p> شمع مشکی (معطر) </p>
+                        <span> ناموجود</span>
+                    </div>
+                </div>
+                <div class="product-box">
+                    <img class="product-img" src="pic/pj8.png">
+                    <div class="product-text">
+                        <p> ساعت رومیزی </p>
+                        <span>۴۱۰٫۰۰۰ تومان</span>
+                    </div>
+                </div>
+                <div class="product-box">
+                    <img class="product-img" src="pic/pj5.png">
+                    <div class="product-text">
+                        <p> قهوه ۱۰۰٪ (۲۵۰ گرمی) </p>
+                        <span>۹۰٫۰۰۰ تومان</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <!-- change-page -->
+
+    <section>
+        <div class="change-page">
+            <div class="change-page-content">
+                <div class="page-changer next-page">
+                    <p>صفحه بعدی</p>
+                    <i class="next-page-arrow fa-solid fa-arrow-right"></i>
+                </div>
+                <div class="current-page">
+                    صفحه
+                    <input type="text" value="2" readonly="readonly">
+                    از <span>2</span>
+                </div>
+                <div class="page-changer previous-page">
+                    <p>صفحه قبلی</p>
+                    <i class="previous-page-arrow fa-solid fa-arrow-left"></i>
                 </div>
             </div>
         </div>
