--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
         </header>
     </section>
 
-<!--     <div class="header-black-background">
+    <div class="header-black-background">
         <a href="#"><img src="pic/mizoma-logo.png" alt=""></a>
         <div class="black-background-icons">
             <i class="search-icon fas fa-search"></i>
             <i class="basket-shopping fa-solid fa-basket-shopping"></i>
         </div>
-    </div> -->
+    </div>
 
     <!-- slider -->
 
