--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <!-- header -->
 
-   
+
 
     <section>
         <header>
@@ -232,19 +232,23 @@
     <section>
         <div class="change-page">
             <div class="change-page-content">
-                <div class="page-changer next-page">
-                    <p>صفحه بعدی</p>
-                    <i class="next-page-arrow fa-solid fa-arrow-right"></i>
-                </div>
+                <a href="#">
+                    <div class="page-changer next-page">
+                        <p>صفحه بعدی</p>
+                        <i class="next-page-arrow fa-solid fa-arrow-right"></i>
+                    </div>
+                </a>
                 <div class="current-page">
                     صفحه
                     <input type="text" value="2" readonly="readonly">
                     از <span>2</span>
                 </div>
-                <div class="page-changer previous-page">
-                    <p>صفحه قبلی</p>
-                    <i class="previous-page-arrow fa-solid fa-arrow-left"></i>
-                </div>
+                <a href="#">
+                    <div class="page-changer previous-page">
+                        <p>صفحه قبلی</p>
+                        <i class="previous-page-arrow fa-solid fa-arrow-left"></i>
+                    </div>
+                </a>
             </div>
         </div>
     </section>
