--- a/index.html
+++ b/index.html
@@ -54,23 +54,26 @@
 
                 <!-- Full-width images with number and caption text -->
                 <div class="mySlides fade">
-                    <img src="pic/1.jpeg" style="width:100%" alt="sliderimg">
+                    <img src="pic/slider1.jpg" style="width:100%" alt="sliderimg">
                 </div>
 
                 <div class="mySlides fade">
-                    <img src="pic/2.jpeg" style="width:100%" alt="sliderimg">
+                    <img src="pic/slider2.jpg" style="width:100%" alt="sliderimg">
                 </div>
 
                 <div class="mySlides fade">
-                    <img src="pic/3.jpeg" style="width:100%" alt="sliderimg">
+                    <img src="pic/slider3.jpg" style="width:100%" alt="sliderimg">
                 </div>
 
                 <div class="mySlides fade">
-                    <img src="pic/4.jpeg" style="width:100%" alt="sliderimg">
+                    <img src="pic/slider4.jpg" style="width:100%" alt="sliderimg">
                 </div>
 
                 <div class="mySlides fade">
-                    <img src="pic/5.png" style="width:100%" alt="sliderimg">
+                    <img src="pic/slider5.jpg" style="width:100%" alt="sliderimg">
+                </div>
+                <div class="mySlides fade">
+                    <img src="pic/slider6.jpg" style="width:100%" alt="sliderimg">
                 </div>
 
 
@@ -88,6 +91,7 @@
                 <img src="pic/33.jpg" class="dot" onclick="currentSlide(3)"></img>
                 <img src="pic/44.jpg" class="dot" onclick="currentSlide(4)"></img>
                 <img src="pic/55.jpg" class="dot" onclick="currentSlide(5)"></img>
+                <img src="pic/slider6.jpg" class="dot" onclick="currentSlide(6)"></img>
 
             </div>
         </div>
@@ -227,7 +231,7 @@
     </section>
 
 
-    <!-- change-page -->
+    <!-- page-changer -->
 
     <section>
         <div class="change-page">
@@ -251,6 +255,30 @@
                 </a>
             </div>
         </div>
+    </section>
+
+
+
+    <section id="stand">
+            <div class="stand">
+                <div class="stand-content">
+                    <div class="stand-image">
+                        <img src="pic/dd10d5ea5a37d894ecf28512348ccc94.jpg" alt="">
+                    </div>
+                    <div class="stand-text">
+                        <h4>استند ایستاده را بیشتر بشناسید</h4>
+                        <p>
+                            <br\> استند عمودی لپتاپ محصولی سادهو کاربردی با طراحی مینیمال است که برای
+                                قرارگیری عمودی مک‌بوک روی میز کار شما ساخته شده. این استند از جنس چوب طبیعی
+                                ساخته شده و طی فرایندی دومرحله‌ای، با روغن طبیعی مونوکوت بلژیک به رنگ مشکی
+                                کشمیر درآمده است؛ رنگی خاص بین قهوه‌ای سوخته و سیاه که در عین محافظت و
+                                پوشش کامل، بافت طبیعی چوب را با تمام جزئیات حفظ و به زیبایی نمایش می‌دهد.
+                            </br\>
+                        </p>
+                        <a href="#">مشاهده و خرید</a>
+                    </div>
+                </div>
+            </div>
     </section>
 
 
