--- a/index.html
+++ b/index.html
@@ -259,28 +259,123 @@
 
 
 
+    <!-- stand -->
+
+
     <section id="stand">
-            <div class="stand">
-                <div class="stand-content">
-                    <div class="stand-image">
-                        <img src="pic/dd10d5ea5a37d894ecf28512348ccc94.jpg" alt="">
+        <div class="stand">
+            <div class="stand-content">
+                <div class="stand-image">
+                    <img src="pic/dd10d5ea5a37d894ecf28512348ccc94.jpg" alt="">
+                </div>
+                <div class="stand-text">
+                    <h4>استند ایستاده را بیشتر بشناسید</h4>
+                    <p>
+                        <br\> استند عمودی لپتاپ محصولی سادهو کاربردی با طراحی مینیمال است که برای
+                            قرارگیری عمودی مک‌بوک روی میز کار شما ساخته شده. این استند از جنس چوب طبیعی
+                            ساخته شده و طی فرایندی دومرحله‌ای، با روغن طبیعی مونوکوت بلژیک به رنگ مشکی
+                            کشمیر درآمده است؛ رنگی خاص بین قهوه‌ای سوخته و سیاه که در عین محافظت و
+                            پوشش کامل، بافت طبیعی چوب را با تمام جزئیات حفظ و به زیبایی نمایش می‌دهد.
+                        </br\>
+                    </p>
+                    <a href="#">مشاهده و خرید</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <!-- accessories-2 -->
+
+
+    <section id="accessories">
+        <div class="product">
+            <div class="product-title">
+                <h4>محصولات الکترونیک</h4>
+            </div>
+            <div class="product-content">
+                <div class="product-box">
+                    <img class="product-img" src="pic/e1.png">
+                    <div class="product-text">
+                        <p> موس بی‌سیم لاجیتک MX MASTER 3 </p>
+                        <span>۳٫۹۵۰٫۰۰۰ تومان</span>
                     </div>
-                    <div class="stand-text">
-                        <h4>استند ایستاده را بیشتر بشناسید</h4>
-                        <p>
-                            <br\> استند عمودی لپتاپ محصولی سادهو کاربردی با طراحی مینیمال است که برای
-                                قرارگیری عمودی مک‌بوک روی میز کار شما ساخته شده. این استند از جنس چوب طبیعی
-                                ساخته شده و طی فرایندی دومرحله‌ای، با روغن طبیعی مونوکوت بلژیک به رنگ مشکی
-                                کشمیر درآمده است؛ رنگی خاص بین قهوه‌ای سوخته و سیاه که در عین محافظت و
-                                پوشش کامل، بافت طبیعی چوب را با تمام جزئیات حفظ و به زیبایی نمایش می‌دهد.
-                            </br\>
-                        </p>
-                        <a href="#">مشاهده و خرید</a>
+                </div>
+                <div class="product-box">
+                    <img class="product-img" src="pic/e2.png">
+                    <div class="product-text">
+                        <p> کیبورد بی‌سیم لاجیتک Craft Bluetooth </p>
+                        <span>۶٫۱۵۰٫۰۰۰ تومان</span>
+                    </div>
+                </div>
+                <div class="product-box">
+                    <img class="product-img" src="pic/e3.png">
+                    <div class="product-text">
+                        <p> کیبورد بی‌سیم لاجیتک MX Keys </p>
+                        <span>۳٫۸۵۰٫۰۰۰ تومان</span>
+                    </div>
+                </div>
+                <div class="product-box">
+                    <img class="product-img" src="pic/e4.png">
+                    <div class="product-text">
+                        <p>چراغ مطالعه هوشمند شیائومی</p>
+                        <span>۱٫۲۵۰٫۰۰۰ تومان</span>
+                    </div>
+                </div>
+                <div class="product-box">
+                    <img class="product-img" src="pic/e5.png">
+                    <div class="product-text">
+                        <p>مانیتور ۲۷ اینچی شیائومی</p>
+                        <span>۶٫۱۰۰٫۰۰۰ تومان</span>
+                    </div>
+                </div>
+                <div class="product-box">
+                    <img class="product-img" src="pic/e6.png">
+                    <div class="product-text">
+                        <p> مانیتور منحنی ۳۴ اینچی شیائومی </p>
+                        <span> ۱۳٫۵۵۰٫۰۰۰ </span>
+                    </div>
+                </div>
+                <div class="product-box">
+                    <img class="product-img" src="pic/e7.png">
+                    <div class="product-text">
+                        <p> لایت بار شیائومی با ریموت کنترلر بی‌سیم </p>
+                        <span>۱٫۶۵۰٫۰۰۰ تومان</span>
+                    </div>
+                </div>
+                <div class="product-box">
+                    <img class="product-img" src="pic/e8.png">
+                    <div class="product-text">
+                        <p> میکروفون RODE NT-USB Mini </p>
+                        <span>۳٫۳۰۰٫۰۰۰ تومان</span>
                     </div>
                 </div>
             </div>
+        </div>
     </section>
 
+    <!-- stand-2 -->
+
+    <section id="stand">
+        <div class="stand">
+            <div class="stand-content">
+                <div class="stand-text">
+                    <h4>به عزیزان خود متفاوت هدیه دهید!</h4>
+                    <p>
+                        از آنجایی که بسیاری از مخاطبان ما محصولات را برای هدیه دادن انتخاب می‌کنند، تصمیم گرفتیم با
+                        معرفی کارت‌های هدیه‌ی اعتباری کار را برای شما ساده کنیم.
+                        شما می‌توانید با خرید هر یک از مبالغ اعتبار خرید از میزوما، تجربه‌ای متفاوت به عزیزان خود هدیه
+                        بدهید؛ به نحوی که هم سلیقه‌ی شما در انتخاب آن دخیل باشد و هم نیاز‌ها و سلیقه‌ی خود عزیزانتان.
+                    </p>
+
+                    <a href="#">مشاهده </a>
+                </div>
+                <div class="stand-image stand-gift-image">
+                    <img src="pic/gift.jpg" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
 
 
 
