--- a/index.html
+++ b/index.html
@@ -378,6 +378,111 @@
     </section>
 
 
+    <!-- blog -->
+
+
+    <section id="blog">
+        <div class="blog">
+            <div class="blog-title">
+                <h2>آخرین مطالب بلاگ میزوما</h2>
+            </div>
+            <div class="blog-content">
+              <a href="#">
+                <div class="blog-box">
+                    <div class="box-image">
+                        <img src="pic/ls3.jpg" alt="">
+                    </div>
+                    <div class="box-text">
+                        <p>
+                            ایستگاه کار عمیق شماره یک؛ پلی لیست اسپاتیفای میزوما مخصوص کار و تمرکز
+                        </p>
+                        <span>
+                            پنج‌شنبه، ۳۱ تیر ۱۴۰۰
+                        </span>
+                    </div>
+                </div>
+              </a>
+              <a href="#">
+                <div class="blog-box">
+                    <div class="box-image">
+                        <img src="pic/ls2.jpg" alt="">
+                    </div>
+                    <div class="box-text">
+                        <p>
+                            چرا ساختن برند شخصی باید اولویت شماره یک شما باشد
+                        </p>
+                        <span>
+                            جمعه، ۱۶ مهر ۱۴۰۰
+                        </span>
+                    </div>
+                </div>
+              </a>
+               <a href="#">
+                <div class="blog-box">
+                    <div class="box-image">
+                        <img src="pic/ls1.jpg" alt="">
+                    </div>
+                    <div class="box-text">
+                        <p>
+                            ایستگاه کار عمیق شماره دو؛ پلی لیست اسپاتیفای میزوما مخصوص کار و تمرکز
+                        </p>
+                        <span>
+                            یک‌شنبه، ۲ آبان ۱۴۰۰
+                        </span>
+                    </div>
+                </div>
+               </a>
+              <a href="#">
+                <div class="blog-box">
+                    <div class="box-image">
+                        <img src="pic/ls4.jpg" alt="">
+                    </div>
+                    <div class="box-text">
+                        <p>
+                            رابطه‌ی ناگسستنی موسیقی و کار؛ چگونه این دو را به شکلی صحیح کنار هم قرار دهیم؟
+                        </p>
+                        <span>
+                            یک‌شنبه، ۲ آبان ۱۴۰۰
+                        </span>
+                    </div>
+                </div>
+              </a>
+               <a href="#">
+                <div class="blog-box">
+                    <div class="box-image">
+                        <img src="pic/ls5.jpg" alt="">
+                    </div>
+                    <div class="box-text">
+                        <p>
+                            چه کنیم هدف‌گذاری‌هایمان برای سال جدید تحقق یابند؟
+                        </p>
+                        <span>
+                            سه‌شنبه، ۱۰ فروردین ۱۴۰۰
+                        </span>
+                    </div>
+                </div>
+               </a>
+               <a href="#">
+                <div class="blog-box">
+                    <div class="box-image">
+                        <img src="pic/ls6.jpg" alt="">
+                    </div>
+                    <div class="box-text">
+                        <p>
+                            به سادگی از کنار «جمعه شب»‌ها نگذرید!
+                        </p>
+                        <span>
+                            جمعه، ۱۰ بهمن ۱۳۹۹
+                        </span>
+                    </div>
+                </div>
+               </a>
+            </div>
+        </div>
+    </section>
+
+
+
 
     <script src="all.min.js"></script>
     <script src="javascript.js"></script>
