--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="container">
                 <nav id="nav">
                     <a href="#">
-                        <img src="pic/logonomy-1645725389131.jpeg" alt="Logo" style="height: 80px;width: 90px;">
+                        <img src="pic/mizoma-logo.png" alt="Logo">
                     </a>
                     <ul>
                         <li><a href="#">صفحه اصلی</a></li>
