--- a/index.html
+++ b/index.html
@@ -41,8 +41,13 @@
     <div class="header-black-background">
         <a href="#"><img src="pic/mizoma-logo.png" alt=""></a>
         <div class="black-background-icons">
-            <i class="search-icon fas fa-search"></i>
+            <i onclick="open_search_bar()" class="search-icon fas fa-search"></i>
             <i class="basket-shopping fa-solid fa-basket-shopping"></i>
+        </div>
+        <div class="open-search">
+            <button disabled  class="btn">جستجو</button>
+            <input class="open_search_input" type="text" placeholder="نام محصول یا دسته ..." maxlength="20">
+            <i onclick="close_search_bar()" id="close-search" class="fa-solid fa-x"></i>
         </div>
     </div>
 
@@ -387,101 +392,104 @@
                 <h2>آخرین مطالب بلاگ میزوما</h2>
             </div>
             <div class="blog-content">
-              <a href="#">
-                <div class="blog-box">
-                    <div class="box-image">
-                        <img src="pic/ls3.jpg" alt="">
+                <a href="#">
+                    <div class="blog-box">
+                        <div class="box-image">
+                            <img src="pic/ls3.jpg" alt="">
+                        </div>
+                        <div class="box-text">
+                            <p>
+                                ایستگاه کار عمیق شماره یک؛ پلی لیست اسپاتیفای میزوما مخصوص کار و تمرکز
+                            </p>
+                            <span>
+                                پنج‌شنبه، ۳۱ تیر ۱۴۰۰
+                            </span>
+                        </div>
                     </div>
-                    <div class="box-text">
-                        <p>
-                            ایستگاه کار عمیق شماره یک؛ پلی لیست اسپاتیفای میزوما مخصوص کار و تمرکز
-                        </p>
-                        <span>
-                            پنج‌شنبه، ۳۱ تیر ۱۴۰۰
-                        </span>
+                </a>
+                <a href="#">
+                    <div class="blog-box">
+                        <div class="box-image">
+                            <img src="pic/ls2.jpg" alt="">
+                        </div>
+                        <div class="box-text">
+                            <p>
+                                چرا ساختن برند شخصی باید اولویت شماره یک شما باشد
+                            </p>
+                            <span>
+                                جمعه، ۱۶ مهر ۱۴۰۰
+                            </span>
+                        </div>
                     </div>
-                </div>
-              </a>
-              <a href="#">
-                <div class="blog-box">
-                    <div class="box-image">
-                        <img src="pic/ls2.jpg" alt="">
+                </a>
+                <a href="#">
+                    <div class="blog-box">
+                        <div class="box-image">
+                            <img src="pic/ls1.jpg" alt="">
+                        </div>
+                        <div class="box-text">
+                            <p>
+                                ایستگاه کار عمیق شماره دو؛ پلی لیست اسپاتیفای میزوما مخصوص کار و تمرکز
+                            </p>
+                            <span>
+                                یک‌شنبه، ۲ آبان ۱۴۰۰
+                            </span>
+                        </div>
                     </div>
-                    <div class="box-text">
-                        <p>
-                            چرا ساختن برند شخصی باید اولویت شماره یک شما باشد
-                        </p>
-                        <span>
-                            جمعه، ۱۶ مهر ۱۴۰۰
-                        </span>
+                </a>
+                <a href="#">
+                    <div class="blog-box">
+                        <div class="box-image">
+                            <img src="pic/ls4.jpg" alt="">
+                        </div>
+                        <div class="box-text">
+                            <p>
+                                رابطه‌ی ناگسستنی موسیقی و کار؛ چگونه این دو را به شکلی صحیح کنار هم قرار دهیم؟
+                            </p>
+                            <span>
+                                یک‌شنبه، ۲ آبان ۱۴۰۰
+                            </span>
+                        </div>
                     </div>
-                </div>
-              </a>
-               <a href="#">
-                <div class="blog-box">
-                    <div class="box-image">
-                        <img src="pic/ls1.jpg" alt="">
+                </a>
+                <a href="#">
+                    <div class="blog-box">
+                        <div class="box-image">
+                            <img src="pic/ls5.jpg" alt="">
+                        </div>
+                        <div class="box-text">
+                            <p>
+                                چه کنیم هدف‌گذاری‌هایمان برای سال جدید تحقق یابند؟
+                            </p>
+                            <span>
+                                سه‌شنبه، ۱۰ فروردین ۱۴۰۰
+                            </span>
+                        </div>
                     </div>
-                    <div class="box-text">
-                        <p>
-                            ایستگاه کار عمیق شماره دو؛ پلی لیست اسپاتیفای میزوما مخصوص کار و تمرکز
-                        </p>
-                        <span>
-                            یک‌شنبه، ۲ آبان ۱۴۰۰
-                        </span>
+                </a>
+                <a href="#">
+                    <div class="blog-box">
+                        <div class="box-image">
+                            <img src="pic/ls6.jpg" alt="">
+                        </div>
+                        <div class="box-text">
+                            <p>
+                                به سادگی از کنار «جمعه شب»‌ها نگذرید!
+                            </p>
+                            <span>
+                                جمعه، ۱۰ بهمن ۱۳۹۹
+                            </span>
+                        </div>
                     </div>
-                </div>
-               </a>
-              <a href="#">
-                <div class="blog-box">
-                    <div class="box-image">
-                        <img src="pic/ls4.jpg" alt="">
-                    </div>
-                    <div class="box-text">
-                        <p>
-                            رابطه‌ی ناگسستنی موسیقی و کار؛ چگونه این دو را به شکلی صحیح کنار هم قرار دهیم؟
-                        </p>
-                        <span>
-                            یک‌شنبه، ۲ آبان ۱۴۰۰
-                        </span>
-                    </div>
-                </div>
-              </a>
-               <a href="#">
-                <div class="blog-box">
-                    <div class="box-image">
-                        <img src="pic/ls5.jpg" alt="">
-                    </div>
-                    <div class="box-text">
-                        <p>
-                            چه کنیم هدف‌گذاری‌هایمان برای سال جدید تحقق یابند؟
-                        </p>
-                        <span>
-                            سه‌شنبه، ۱۰ فروردین ۱۴۰۰
-                        </span>
-                    </div>
-                </div>
-               </a>
-               <a href="#">
-                <div class="blog-box">
-                    <div class="box-image">
-                        <img src="pic/ls6.jpg" alt="">
-                    </div>
-                    <div class="box-text">
-                        <p>
-                            به سادگی از کنار «جمعه شب»‌ها نگذرید!
-                        </p>
-                        <span>
-                            جمعه، ۱۰ بهمن ۱۳۹۹
-                        </span>
-                    </div>
-                </div>
-               </a>
+                </a>
             </div>
         </div>
     </section>
 
+   
 
+    
+    
 
 
     <script src="all.min.js"></script>
