--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </div>
         <div class="open-search">
             <button disabled  class="btn">جستجو</button>
-            <input class="open_search_input" type="text" placeholder="نام محصول یا دسته ..." maxlength="20">
+            <input class="open_search_input" type="search" placeholder="نام محصول یا دسته ..." maxlength="20">
             <i onclick="close_search_bar()" id="close-search" class="fa-solid fa-x"></i>
         </div>
     </div>
