--- a/index.html
+++ b/index.html
@@ -31,8 +31,13 @@
                         <li><a href="#">طراحی</a></li>
                         <li><a href="#">مشارکت</a></li>
                         <li><a href="#">تماس با ما</a></li>
+                        <li><a href="#">عضویت</a></li>
+                        <li><a href="#">وارد شوید</a></li>
+                        <li>
+                            <i class="search-icon fas fa-search"></i>
+                            <i class="basket-shopping fa-solid fa-basket-shopping"></i>
+                        </li>
                     </ul>
-                    <i onclick="close_sidebar()" id="close-sidebar" class="fa-solid fa-x"></i>
                 </nav>
             </div>
         </header>
