--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<html lang="en" dir="rtl">
+<html lang="fa" dir="rtl">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<!--     <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0">
     <link rel="stylesheet" href="style.css">
     <title>Mizoma</title>
@@ -41,7 +40,7 @@
                     </ul>
                     <i onclick="close_sidebar()" id="close-sidebar" class="fa-solid fa-x"></i>
                     <div class="open-search1 not-display">
-                        <button disabled class="btn">جستجو</button>
+                        <button disabled class="btn" >جستجو</button>
                         <input class="open_search_input1" type="text" placeholder="نام محصول یا دسته ..."
                             maxlength="20">
                         <i onclick="close_search_bar()" id="close-search" class="fa-solid fa-x"></i>
@@ -63,6 +62,17 @@
             <i onclick="close_search_bar()" id="close-search" class="fa-solid fa-x"></i>
         </div>
     </div>
+
+
+    <!-- basket-shopping -->
+
+    <div class="basket-box">
+        <div class="basket-content">
+            
+        </div>
+    </div>
+
+
 
     <!-- slider -->
 
